--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -21,7 +21,11 @@ spec:
   - host: {{ .Values.ingress.host }}
     http:
       paths:
-      - backend:
-          serviceName: {{ include "tranql.fullname" . }}
-          servicePort: {{ .Values.port }}
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ include "tranql.fullname" . }}
+            port:
+              number: {{ .Values.port }}
 {{ end }}
