--- a/Chart.yaml
+++ b/Chart.yaml
@@ -15,16 +15,16 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.3-dev
+version: 0.4-dev
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.3.0"
+appVersion: "0.4.dev2"
 
 dependencies:
   - name: redis
-    version: "13.0.0"
+    version: "15.4.1"
     repository: "https://charts.bitnami.com/bitnami"
     condition: redis.enabled
