--- a/values.yaml
+++ b/values.yaml
@@ -1,13 +1,21 @@
-image: helxplatform/tranql-app
+image: helxplatform/tranql
 # --  Overrides image tag. default is Chart.appversion
 imageTagOverride: ""
 replicas: 1
 port: 8081
 gunicorn:
   workerCount: 4
-  workerTimeout: 300
+  workerTimeout: 1600
 service:
   type: ClusterIP
+
+resources:
+  requests:
+    cpu: 250m
+    memory: 2Gi
+  limits:
+    cpu: 1000m
+    memory: 5Gi
 
 # -- Tranql query timeout sent to redis in milliseconds
 tranql_redis_query_timeout: 10000 # 10 secs
@@ -19,67 +27,106 @@ existingRedis:
   secret: ""
   secretPasswordKey: ""
 
-redisDumpUri: "" # https://stars.renci.org/var/kgx_data/roger_graph.rdb
 ingress:
-  class:
-  enable: false
+  pathType: ImplementationSpecific
+  annotations:
+   nginx.ingress.kubernetes.io/enable-cors: "true"
+   cert-manager.io/cluster-issuer: letsencrypt
+  enabled: false
   tls:
-    secretName:
-  host:
+    secretName: ""
+  host: ""
+
 redis:
   enabled: true
-  # To allow loading seeding the db from rdb files.
-  # --- start seeddb configuration
-  persistence:
-    existingClaim: tranql-redis-pvc
-  configmap: |-
-    # Disables appendonly , this instance is readonly. And needs to be
-    # seeded from RDB files if needed.
+  commonConfiguration: |-
     appendonly no
-    # Disable RDB persistence, AOF persistence already enabled.
-    save ""
-  # For simplicity in this chart we use auth disable.
-  # When using as part of other chart, tranql chart will check
-  # for usePassword True. And currently only supports values for
-  # existingSecret and existingSecretPasswordKey.
-  usePassword: false
-  # --- end seeddb configuration
+  usePassword: true
+  clusterDomain: cluster.local
   image:
     repository: redislabs/redisgraph
-    tag: 2.2.14
-  redis:
-    command: "redis-server"
-  # --- no clustering for standalone
-  # issue with seeding replicas using redis chart.
-  cluster:
-    slaveCount: 1
-
+    tag: 2.8.4
+  auth:
+    enable: true
+    password: "changeme"
   master:
+    persistence:
+      size: 15Gi
+    initContainers:
+     - name: init-db
+       image: busybox
+       securityContext:
+          runAsUser: 1001
+          runAsGroup: 1001
+       command:
+         - "wget"
+       args:
+         - "https://stars.renci.org/var/kgx_data/roger_graph_v3.0.rdb"
+         - "-O"
+         - "/data/dump.rdb"
+       volumeMounts:
+       - name: redis-data
+         mountPath: /data
     resources:
       requests:
-        memory: 10Gi
+        memory: 12Gi
+        cpu: 200m
+      limits:
+        memory: 15Gi
+        cpu: 1000m
     command: ""
-    # Command to do a little house keeping
-    # Use this to download rdb file if seeding needs to be done
     readinessProbe:
-      enabled: false
+      enabled: true
+      # to make it available ASAP
+      periodSeconds: 1
+      # spans 25 mins (150 * 10 secs)
+      failureThreshold: 1
     livenessProbe:
+      # Liveliness probes can be off, since
+      # With big cache data to load or sync , redis is alive but
+      # responds with LOADING message. to avoid cyclic restarts
+      # keeping this off
       enabled: false
     extraFlags:
-      - "--loadmodule /usr/lib/redis/modules/redisgraph.so"
-    service:
-      port: 6379
-  clusterDomain: "blackbalsam-cluster"
-  slave:
+      - "--loadmodule"
+      - "/usr/lib/redis/modules/redisgraph.so"
+      - "THREAD_COUNT"
+      - "8"
+      - "OMP_THREAD_COUNT"
+      - "16"
+      - "--appendonly"
+      - "no"
+  replica:
+#    replicaCount: 1
+    persistence:
+      size: 15Gi
+    autoscaling:
+      enabled: true
+      minReplicas: 1
+      maxReplicas: 2
+      targetCPU: 100
     resources:
       requests:
-        memory: 10Gi
-    command: ""
+        memory: 12Gi
+        cpu: 1000m
+      limits:
+        memory: 15Gi
+        cpu: 2000m
+    extraFlags:
+      - "--loadmodule"
+      - "/usr/lib/redis/modules/redisgraph.so"
+      - "THREAD_COUNT"
+      - "8"
+      - "OMP_THREAD_COUNT"
+      - "16"
     readinessProbe:
-      enabled: false
+      enabled: true
+      # to make it available ASAP
+      periodSeconds: 1
+      # Having a lower count will make sure that routing to a replica that
+      # is not ready yet to not be routed to.
+      failureThreshold: 1
+      # make sure its really ready
+      successThreshold: 5
     livenessProbe:
       enabled: false
-    extraFlags:
-      - "--loadmodule /usr/lib/redis/modules/redisgraph.so"
-    service:
-      port: 6379
